<resources>
    <string name="app_name">NutriMons</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="tamagotchi">Tamagotchi</string>
    <string name="tamagotchi_shop">Tamagotchi Shop</string>
    <string name="back">Back</string>
    <string name="shop">Shop</string>
    <string name="meal">Meal</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="add_meal">Add Meal</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="exercise">Exercise</string>
    <string name="dailySummary">Daily Summary</string>
    <string name="nutrients">Nutrients</string>
    <string name="nutrient_information">Nutrient Information</string>
    <string name="nutrient_overview">Nutrient Overview</string>
    <string name="purpose">Purpose</string>
    <string name="sourceLink">Source Link</string>
    <string name="manually_add_meal">Manually Add Meal</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="name_of_food">Name of Food:</string>
    <string name="name">Name</string>
    <string name="serving_size">Serving Size:</string>
    <string name="serving_size_edit_text">Serving Size</string>
    <string name="servings_eaten">Servings Eaten:</string>
    <string name="servings_eaten_edit_text">Servings Eaten (decimals ok)</string>
    <string name="calories">Calories:</string>
    <string name="submit">Submit</string>
    <string name="calories_per_serving">Calories Per Serving</string>
    <string name="select_snack">Select your snack(s):</string>
    <string name="select_dinner">Select your dinner:</string>
    <string name="select_lunch">Select your lunch:</string>
    <string name="select_breakfast">Select your breakfast:</string>
    <string name="registration_prompt">Need have an account? Create one here</string>
    <string name="login_prompt">Have an account? Log in here</string>
    <string name="select_workout">Select an existing workout</string>
    <string name="create_new_workout">Create a new workout activity</string>
    <string name="name_of_exercise">Name of Exercise:</string>
    <string name="name_of_exercise_edit_text">Name of exercise…</string>
    <string name="unit_name">Unit Name:</string>
    <string name="calories_per_unit">Calories per Unit:</string>
    <string name="calories_per_unit_edit_text">Calories per Unit</string>
    <string name="unit_name_edit_text">e.g. \'set\', \'rep\'</string>
    <string name="add_water">Add Water</string>
    <string name="water_tracker">Water Tracker</string>
    <string name="enter_amount_of_water">Enter amount of water</string>
    <string name="profile">Profile</string>
    <string name="duration">Duration</string>
    <string name="hint_15_min">15 min</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="today_s_fun_fact">Today\'s Fun Fact</string>
    <string name="dashboard">Dashboard</string>
    <string name="fun_fact">Fun Fact</string>
    <string name="scan_barcode_button">Scan Barcode</string>
    <string name="barcode_string">Barcode String</string>
    <string name="barcode_api_json">Barcode Api Json</string>
    <string name="barcodeRetake">Retake</string>
    <string name="barcodeAccept">Accept</string>
    <string name="personal_section">Personal</string>
    <string name="profile_focus">Profile Focus</string>
    <string name="profile_name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="birthday">Birthday</string>
    <string name="save_profile">Save ALL Changes</string>
    <string name="nutrient_recommendation_button">Show Nutrient Recommendations</string>
    <string name="nutrient_table_nutrient_header">Nutrient</string>
    <string name="save_workout">Save Workout</string>
    <string name="bug_report_form">Bug Report Form</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_name">Feedback Name</string>
    <string name="thank_you_for_contacting_us_please_report_the_bug_in_the_below_form">Thank you for contacting us! Please report the bug in the below form.</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="remind_me_to_return">Remind me to take a break</string>
    <string name="remind_me">Enable notifications</string>
    <string name="notifications">Notifications</string>
</resources>