<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

    </group>

    <item android:title="@string/tamagotchi">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tamagotchi"
                    android:icon="@drawable/ic_pet"
                    android:title="@string/tamagotchi" />
                <item
                    android:id="@+id/nav_tamagotchiShop"
                    android:icon="@drawable/ic_shop"
                    android:title="@string/tamagotchi_shop" />
            </group>
        </menu>
    </item>

    <item android:title="@string/meal">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_meal"
                    android:icon="@drawable/ic_meal"
                    android:title="@string/meal" />
                <item
                    android:id="@+id/nav_mealPlan"
                    android:icon="@drawable/ic_meal_plan"
                    android:title="@string/meal_plan" />
                <item
                    android:id="@+id/nav_addMeal"
                    android:icon="@drawable/ic_add_meal"
                    android:title="@string/add_meal" />
                <item
                    android:id="@+id/nav_scanBarcode"
                    android:icon="@drawable/ic_qr_code"
                    android:title="@string/scan_barcode" />
            </group>
        </menu>
    </item>

    <item android:title="@string/exercise">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_exercise"
                    android:icon="@drawable/ic_exercise"
                    android:title="@string/exercise" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nutrients">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_nutrientOverview"
                    android:icon="@drawable/ic_graph"
                    android:title="@string/nutrient_overview" />
                <item
                    android:id="@+id/nav_nutrientInformation"
                    android:icon="@drawable/ic_info"
                    android:title="@string/nutrient_information" />
            </group>
        </menu>
    </item>
</menu>