<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_bug_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_tamagotchi_background"
    tools:context=".BugReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_bug_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/bug_report_form"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bugReportTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_you_for_contacting_us_please_report_the_bug_in_the_below_form"
            android:visibility="gone"
            tools:visibility="gone" />


        <EditText
            android:id="@+id/feedback_name_bug_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/feedback_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/send_feedback_bug_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/feedback"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:id="@+id/send_feedback_button_bug_report" />

    </LinearLayout>

</FrameLayout>