<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/notifications">
    <!--this list preference is for remind me option-->
    <ListPreference
        android:defaultValue="1"
        android:dialogTitle="@string/remind_me_to_return"
        android:entries="@array/pref_remind_me_to_take_a_break"
        android:entryValues="@array/pref_duration"
        android:key="notification"
        android:summary="@string/remind_me"
        android:title="@string/remind_me" />
    </PreferenceCategory>

    <PreferenceCategory app:title="Recommenders">
        <SwitchPreferenceCompat
            android:key="mealRecommender"
            android:title="Enable meal recommendation"
            android:summary="Enable meal recommendation"/>

        <SwitchPreferenceCompat
            android:key="exerciseRecommender"
            android:title="Enable exercise recommendation"
            android:summary="Enable exercise recommendation"/>
    </PreferenceCategory>

</PreferenceScreen>

