<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ScanBarcode">

    <Button
        android:id="@+id/camera_capture_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="50dp"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/scan_barcode_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

    </androidx.camera.view.PreviewView>

    <LinearLayout
        android:id="@+id/barcodeResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/barcodePreview"
            android:layout_width="144dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:src="@drawable/barcode"
            app:srcCompat="@drawable/barcode" />

        <TextView
            android:id="@+id/barcodeString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/barcode_string" />

        <Button
            android:id="@+id/barcodeRetake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/barcodeRetake" />

        <Button
            android:id="@+id/barcodeAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/barcodeAccept" />

        <TextView
            android:id="@+id/barcodeApiResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/barcode_api_json" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>